--- a/jpa/src/main/resources/application.properties
+++ b/jpa/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 # adaugati emailul personal
-spring.mail.username=Mail
+spring.mail.username=zaharia.andrei@ymail.com
 # generati o parola din contul vostru-> security -> 2-step verification -> App passwords generati una noua pe care sa o folositi
-spring.mail.password=***********
+spring.mail.password=iovvnahhyibpjuuv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
